Updating language on optimization email #1

--- a/Resilience Loops/emails/Optimization Email 1/index.mjml
+++ b/Resilience Loops/emails/Optimization Email 1/index.mjml
@@ -62,10 +62,11 @@
           foundation that is actually performing.
         </mj-text>
         <mj-text>
-          But as an Architect, you know that the higher you build, the more the
-          <strong>Durability Standard</strong> matters. Is your excellence baked
-          into the DNA of the organization, or is it still dependent on the
-          heroic effort of a few key individuals?
+          But as you continue to scale, the
+          <strong>Durability Standard</strong> becomes your new benchmark. There
+          is a fine line between a team that is performing and a system that is
+          permanent. Is your success baked into the DNA of the organization, or
+          is it still dependent on the heroic effort of a few key individuals?
         </mj-text>
         <mj-text> Let’s ensure what you’ve built is built to last. </mj-text>
         <mj-text>Talk Soon,</mj-text>
